objects/Tracker_Event__e.object
<CustomObject>
    <description>Events generated from a solar panel track.</description>
    <fields>
        <fullName>DateTime__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>data updated time</description>
        <label>Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>error_code__c</fullName>
        <description>Error codes generated by the solar panel track.</description>
        <label>error code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <description>Model of the tracker.</description>
        <label>model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>power_output__c</fullName>
        <description>Output of all the panels in the track combined.</description>
        <label>power output</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rotation_x__c</fullName>
        <description>The x-axis rotation of the entire track of panels.</description>
        <label>rotation x</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rotation_z__c</fullName>
        <description>The z-axis rotation of the entire track of panels.</description>
        <label>rotation z</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serial_no__c</fullName>
        <description>Serial number of the track.</description>
        <label>serial no</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>series__c</fullName>
        <description>The model series of the track.</description>
        <label>series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tracker Event</label>
    <pluralLabel>Tracker Events</pluralLabel>
</CustomObject>